--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 	
 	<properties>
 		<componentName>jsr168</componentName>
+            <jiraProjectName>JSRPORTLET</jiraProjectName>
 	</properties>
     <scm>
         <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/cms/plugin-jsr168</connection>
