--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 	<properties>
 		<componentName>jsr168</componentName>
             <jiraProjectName>JSRPORTLET</jiraProjectName>
+		<jiraComponentId>10204</jiraComponentId>
 	</properties>
     <scm>
         <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/cms/plugin-jsr168</connection>
